#4 added golang simple server to the app with docker file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,14 @@
 version: '3'
 
 services:
-  
+  server:
+    container_name: golang-server
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '5000:5000'
+
   nginx:
     container_name: nginx
     build:
