--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,24 @@
 version: '3'
 
 services:
+
   server:
     container_name: golang-server
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - postgresql.env
+    environment:
+      POSTGRES_HOST: "localhost"
+      POSTGRES_DB: "mydb1"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "mypassword23"
+      POSTGRES_PORT: "5432"
     ports:
       - '5000:5000'
+    depends_on:
+      - 'postgres'
 
   nginx:
     container_name: nginx
@@ -16,3 +27,23 @@ services:
       dockerfile: ./nginx/Dockerfile
     ports:
       - '8000:8000'
+    depends_on:
+      - "server"
+
+
+  postgres:
+    container_name: postgres_container
+    build:
+      context: .
+      dockerfile: ./postgres/Dockerfile
+    restart: "always"
+    env_file:
+      - postgresql.env
+    environment:
+      POSTGRES_HOST: "localhost"
+      POSTGRES_DB: "mydb1"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "mypassword23"
+      POSTGRES_PORT: "5432"
+    ports:
+      - 5435:5432
